# sgpr_ros

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  package.xml  plot_closures.py
config/: params.yaml
config/3RScan/: 3RScan.json  config.json
data/: DT_eigs.json  NMT_eigs.json  eigs.json
depricated/: Pipeline.cpp  Pipeline.h
depricated/DataLoaders/: DataLoader.h  Matterport3D.h  RScanDataLoader.cpp  SemanticKitti.h
include/: Pipeline.h  Scene.h
include/DataLoaders/: DataLoader.h  Matterport3D.h  RScanDataLoader.h  SemanticKitti.h
include/GUI/: imconfig.h  imgui_state.h
include/KeyFrames/: KeyFrameDB.h
include/Pipelines/: NovelMethodTestingPipeline.h  Pipeline.h  RScanPipeline.h
include/Processing/: Eigen.hpp  Files.hpp  GFA.hpp  Laplacian.hpp  PointCloud.hpp
include/Types/: GraphLaplacian.h  Scene.h
include/Utils/: Visualization.hpp
launch/: sgpr.launch
results/: pr.json
results/3RScan/: 0.json
results/3RScan/Generic/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  pr.json
results/3RScan/Geometric/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json
results/3RScan/Geometric_IDW/: 0.json  1.json  2.json  3.json  4.json
results/3RScan/IDW/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  pr.json
results/3RScan/Normalized/: 0.json  1.json  2.json  3.json  4.json
results/3RScan/PlaceRecognition/: Generic.json  Geometric.json  Geometric_IDW.json  IDW.json  Normalized.json
results/SemanticKitti/00/: results.json  results105_1555.json  results385_2435.json
results/SemanticKitti/00/100/: results0_4435.json  results105_1555.json  results2335_3275.json  results385_2435.json  results400_3400.json  results500_3500.json  results600_3570.json  results700_3650.json  results810_3740.json  results_no_loop.json
results/SemanticKitti/00/1000/: results0_0.json  results0_4435.json  results385_2435.json  results_no_loop.json
results/SemanticKitti/00/500/: results0_4435.json  results105_1555.json  results2335_3275.json  results_no_loop.json
results/SemanticKitti/02/: results3335_4575.json
results/SemanticKitti/02/100/: results3335_4575.json  results915_4185.json  results_no_loop.json
results/SemanticKitti/02/1000/: results0_0.json  results915_4185.json  results_no_loop.json
results/SemanticKitti/02/500/: results915_4185.json  results_no_loop.json
results/SemanticKitti/05/: results.json  results13_22.json
results/SemanticKitti/05/100/: results15_2415.json  results795_2575.json  results_no_loop.json
results/SemanticKitti/05/1000/: results0_0.json  results15_2415.json  results795_2575.json  results_no_loop.json
results/SemanticKitti/05/500/: results2495_3865.json  results705_1405.json  results_no_loop.json
results/SemanticKitti/06/: results.json  results_1.json  results_2.json  results_3.json
results/SemanticKitti/06/100/: results0_0_100_20.json  results_no_loop.json
results/SemanticKitti/06/1000/: results0_0.json  results0_840.json  results100_930.json  results200_1020.json  results_no_loop.json
results/SemanticKitti/06/500/: results0_0.json  results200_1020.json  results_no_loop.json
results/SemanticKitti/07/: results.json  results_1.json
results/SemanticKitti/07/100/: results.json  results0_0.json  results_no_loop.json
results/SemanticKitti/07/1000/: results0_0.json  results0_1045.json  results_no_loop.json
results/SemanticKitti/07/500/: results0_0.json  results0_1045.json  results_no_loop.json
results/SemanticKitti/08/: results2495_3865.json  results705_1405.json
results/SemanticKitti/08/100/: results150_1700.json  results180_1615.json  (+4 more)
results/gfa/: pr.json  results.json
scripts/: ad_test_service.py  eval.py  evaluation_service.py  gfa_instance.py  gfa_pr.py  histogram_viz_service.py  ks_test_service.py  point_cloud_viz_service.py  pr_multi_class.py  pygui.py  sgpr_analysis.py  sklearn_pr_curve.py  test_parse.py
src/: Pipeline.cpp  main.cpp
src/DataLoaders/: RScanDataLoader.cpp
src/Pipelines/: NovelMethodTestingPipeline.cpp  RScanPipeline.cpp
srv/: Eigenvalues.srv  PointClouds.srv
(+7 files in other folders)
