<package format="2">
  <name>sgpr_ros</name>
  <version>0.0.1</version>
  <description>
    sgpr is a 3D place recognition pipeline for SLAM systems.
  </description>
  <maintainer email="natepgyory@gmail.com">Nathaniel Gyory</maintainer>
  <license>MIT</license>

  <url>https://github.com/NateGyory/SGPR</url>
  <author>Nathaniel Gyory</author>

  <!-- TODO fill in the rest of the depends when you are done -->
  <depend>roscpp</depend>
  <!-- <depend>std_msgs</depend> -->

  <!-- <build_depend>message_generation</build_depend> -->

  <!-- <exec_depend>message_runtime</exec_depend> -->
  <exec_depend>rospy</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
